--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,7 +1,7 @@
 body {
     background-color: #F0E2CB;
-    margin-left: 360px;
-    margin-right: 360px;
+    margin: auto;
+    width: 1000px;
 }
 header {
     text-align: center;
@@ -37,10 +37,66 @@ ul li {
 ol li {
     font-size: 20px;
 }
-#toc-index {
-    text-align: center;
+#toc-index  {
+    display: flex;
+    flex-direction: column;
 }
 #related-articles .related {
     display: flex;
 
+}
+
+/* NAV STUFF RIGHT HERE  */
+
+header nav menu li {
+    list-style: none;
+}
+header nav menu#main-menu {
+    display: flex;
+    align-items: center;
+}
+
+header nav menu#main-menu li a {
+    display: flex;
+    align-items: center;
+}
+header nav {
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+/* SPELLS STUFF YO */
+
+#fire-spells h2 {
+    text-align: center;
+   
+}
+
+.spell-l {
+    display: flex;
+    gap: 40px;
+    
+}
+.spell-l h4 {
+    padding-left: 20px;
+}
+.spell-l p {
+    padding-left: 40px;
+}
+.spell-r h4 {
+    padding-left: 20px;
+}
+.spell-r {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 40px;
 }
