--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,7 +1,8 @@
 body {
     background-color: #F0E2CB;
     margin: auto;
-    width: 1000px;
+    width: 60%;
+    color: #220038;
 }
 header {
     text-align: center;
@@ -41,13 +42,14 @@ ol li {
     font-size: 20px;
 }
 #toc-index  {
-    display: flex;
-    flex-direction: column;
+  text-align: center;
 }
-#related-articles .related {
-    display: flex;
+#toc-index ol {
+    margin: auto;
+    display: inline-block;
+    text-align: left;
+}
 
-}
 
 /* NAV STUFF RIGHT HERE  */
 
@@ -78,6 +80,13 @@ header nav {
 }
 
 
+/* FOOOOOOOOOOOOOOOOTER */
+
+#related-articles {
+    display: flex;
+   
+}
+
 
 
 
@@ -88,7 +97,6 @@ header nav {
 
 
 /* SPELLS STUFF YO */
-
 
 
 /* SPELL CARD ORIENTATIONS */
@@ -158,16 +166,16 @@ header nav {
 
 .enchantment-duo {
     display: flex;
+    gap: 100px;
+}
+.enchantment-duo h3 {
+    padding-left: 25px;
+}
+
+.enchantment-duo div {
+    flex: 1;
+
     
-}
-.flame-e {
-    width: 50%;
-}
-.ice-e {
-    width: 50%;
-}
-.echantement-duo div {
-    width: 50%;
 }
 
 
@@ -186,9 +194,34 @@ STAFFS PAGE STAFFS PAGE STAFFS PAGE */
 
 /* &^*(%$*&^ ASK PROF ABOUT SPACING )*&%&*(^%*/
 
+#wood-types {
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
+
+
+#term-defs h3 {
+    text-align: center;
+    padding-top: 70px;
+}
+#term-defs h4 {
+    padding-block: 10px;
+    margin: 0px;
+}
+#term-defs p {
+    padding-top: 0px;
+    padding-bottom: 15px;
+    padding-left: 30px;
+}
+#term-defs div {
+    padding-inline: 150px;
+}
+
+
+
 .wood-header h2 {
     text-align: center;
-    padding-top: 100px;
+    padding-top: 70px;
 }
 .wood {
     display: flex;
@@ -196,6 +229,11 @@ STAFFS PAGE STAFFS PAGE STAFFS PAGE */
     text-align: left;
     margin-left: 100px;
     margin-right: 100px;
+}
+
+#wood-types div {
+    padding-block: 25px;
+    padding-inline: 70px;
 }
 
 .wood p {
