--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -49,12 +49,14 @@ h4 {
 }
 
 a {
-    color: purple;
+    color: rgb(34, 21, 146);
     transition: color .5s;
+    transition: text-shadow .5s; 
 }
 
 a:hover {
-    color: red;
+    color: #ff0000;
+    text-shadow: #ff0000 1px 0px 20px;
 }
 
 ul {
@@ -130,14 +132,14 @@ footer {
 /* SCROLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL */
 
 #scroll-animation {
-    background-image: url('../Assets/images/scroll-bottom-1.svg');
+    background-image: url('../Assets/images/scroll-bottom-1-v2.svg');
     background-repeat: no-repeat;
     background-size: 70%;
-    width: 100%;
-    height: 300px;
+    width: 145%;
+    height: 250px;
     position: fixed;
-    bottom: -93px;
-    left: 15%;
+    bottom: -70px;
+    left: -.5%;
     animation: scrollmove 1s infinite;
     animation-play-state: paused;
     animation-delay: calc(var(--scroll) * -2s);
@@ -145,15 +147,15 @@ footer {
 
 @keyframes scrollmove {
     0%  { 
-      background-image: url('../Assets/images/scroll-bottom-1.svg');
+      background-image: url('../Assets/images/scroll-bottom-1-v2.svg');
      }
      
      50%  { 
-       background-image: url('../Assets/images/scroll-bottom-2.svg'); 
+       background-image: url('../Assets/images/scroll-bottom-2-v2.svg'); 
      }
      
      100% {
-       background-image: url('../Assets/images/scroll-bottom-3.svg');
+       background-image: url('../Assets/images/scroll-bottom-3-v2.svg');
      }
    }
 
