--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -140,9 +140,9 @@ footer {
     position: fixed;
     bottom: -70px;
     left: -.5%;
-    animation: scrollmove 1s infinite;
+    /* animation: scrollmove 1s infinite;
     animation-play-state: paused;
-    animation-delay: calc(var(--scroll) * -2s);
+    animation-delay: calc(var(--scroll) * -2s); */
 }
 
 @keyframes scrollmove {
