--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -126,10 +126,34 @@ footer {
    
 }
 
+/* NEWSLETTER CSS */
 
 
+#newsletter-whole {
+    align-content: center;
+    padding-block: 100px;
+}
 
+#news-button {
+    background:url(../Assets/images/button.svg) no-repeat;
+    border-style: none;
+    cursor: pointer;
+    width: 200px;
+    height: 200px;
+    font-family: 'Lancelot';
 
+}
+
+#news-button:hover {
+    background:url(../Assets/images/button-hover.svg) no-repeat;
+    width: 200px;
+    height: 200px;
+}
+
+#newsletter input {
+    font-family: 'Lancelot';
+
+}
 
 /* SCROLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL */
 
