--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -136,7 +136,7 @@ footer {
 }
 
 #news-button {
-    background:url(../Assets/images/button-v2.svg) no-repeat;
+    background:url(../Assets/images/button-v3.svg) no-repeat;
     border-style: none;
     cursor: pointer;
     width: 200px;
@@ -146,7 +146,7 @@ footer {
 }
 
 #news-button:hover {
-    background:url(../Assets/images/button-hover.svg) no-repeat;
+    box-shadow: #ffdd1c 1px 0px 20px;
     width: 200px;
     height: 200px;
 }
@@ -156,6 +156,9 @@ div#newsletter-bg {
     width: 315px;
     height: 98px;
 }
+
+
+
 
 input#newsletter  {
     font-family: 'Lancelot';
@@ -172,9 +175,21 @@ input#newsletter  {
 }
 
 input#newsletter:focus {
-    box-shadow: #ff0000 1px 0px 20px;
+    box-shadow: #ffdd1c 1px 0px 20px;
     outline: none;
 }
+
+footer form {
+    display: flex;
+}
+
+
+
+
+
+
+
+
 
 /* SCROLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL */
 
@@ -210,11 +225,11 @@ input#newsletter:focus {
    #scroll-animation-top {
     background-image: url('../Assets/images/scroll-bottom-1-v2.svg');
     background-repeat: no-repeat;
-    background-size: 70%;
-    width: 145%;
-    height: 250px;
+    background-size: 100% 100%;
+    width: 100%;
+    height: 150px;
     position: fixed;
-    top: -70px;
+    top: 0px;
     left: -.5%;
     transform: scaleY(-1);
     /* animation: scrollmove 1s infinite;
